--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -219,8 +219,7 @@
         android:textSize="16sp"
         android:layout_alignBaseline="@+id/textView3"
         android:layout_alignBottom="@+id/textView3"
-        android:layout_toRightOf="@+id/curSpeedTextView"
-        android:layout_toEndOf="@+id/curSpeedTextView"
+        android:layout_toRightOf="@+id/textView3"
         android:layout_marginLeft="4sp" />
 
     <TextView
